--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 package-lock.json
 node_modules/*
 .env
-# Keep environment variables out of version controlg
+# Keep environment variables out of version control
